k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-stacklayer
  namespace: hello-stacklayer
  labels:
    app: hello-stacklayer
spec:
  selector:
    app: hello-stacklayer
  ports:
    - name: http
      port: 80
      targetPort: 8000
